--- a/infra/configs/prometheus/prometheus.yaml
+++ b/infra/configs/prometheus/prometheus.yaml
@@ -9,4 +9,8 @@ scrape_configs:
   - job_name: 'tempo'
     static_configs:
       - targets: [ 'tempo:3200' ]
-
+  - job_name: 'pushgateway'
+    honor_labels: true
+    scrape_interval: 500ms
+    static_configs:
+      - targets: [ 'pushgateway:9191' ]
